# poly-reward

./: .gitignore  CLAUDE.md  POSITION_TRACKING_REVISION.md  PolyMarketLiquidityProvisionSystem.md  README.md  README_TRADING_BOT.md  eth_candle_analysis.ipynb  main.py  poly-reward.code-workspace  poly_reward_cli.py  polymarket_hourly_trading_bot.py  pyproject.toml  start_trading_bot.py  test_market_making_bot.py  trading_bot_manager.py
.cursor/rules/: uv.mdc
.taskmaster/: config.json  state.json
.taskmaster/docs/: prd.txt
.taskmaster/tasks/: tasks.json
analysis/: data_processor.py  polymarket_analysis.ipynb  strategy_implementation.py
config/: trading_config.yaml
docs/: limitless-exchange-api.yaml
examples/: eth_candle_prediction_demo.py  liquidity_provision_demo.py
scripts/: README_orderbook_collector.md  decode_orderbook_data.py  ethusdt.py  polymarket_orderbook_collector.py  test_core_optimization.py  test_orderbook_optimization.py  test_orderbook_optimization_simple.py  test_robust_orderbook_collector.py
scripts/ws_pm_order_book/: README_orderbook_collector.md  polymarket_orderbook_collector.py
src/: api_models.py  arbitrage_utils.py  client.py  constants.py  data_loading_utils.py  eth_candle_predictor.py  eth_prediction_strategy.py  limitless_client.py  market_data_fetcher.py  market_screener.py  models.py  order_manager.py  parsing_utils.py  polymarket_client.py  polymarket_hourly_trading_bot.py  strategy.py  strategy_base.py
src/core/: models.py
src/data/: feature_engineering.py
src/dl_candle_direction_predictor/: README.md  __init__.py  data_loader.py  evaluate.py  example.py  feature_engineering.py  model.py  predictor.py  train.py  (+1 more)
tests/: test_market_screener.py  test_models.py  test_order_manager.py  test_polymarket_client.py  test_strategy.py
(+15 files in other folders)
