[project]
name = "poly-reward"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.13",
    "ccxt>=4.4.91",
    "dependency-injector>=4.47.1",
    "eth-account>=0.13.7",
    "jupyter>=1.1.1",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "py-clob-client>=0.23.0",
    "pydantic>=2.11.7",
    "pytest-asyncio>=1.0.0",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "ratelimit>=2.2.1",
    "textual>=3.5.0",
    # ML and data science dependencies
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    # Additional async and utility packages
    "asyncio>=3.4.3",
    "requests>=2.31.0",
    "websockets>=15.0.1",
]
